Se arregló la tarjeta, ahora funciona

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         </div>
 
         <div class="right-card">
-            <h2>Feliz Navidad!</h2>
+            <h2>¡Feliz Navidad!</h2>
             <p>Que la magia de la Navidad abra sus corazones y estén llenos de paz.</p>
+            <p>El recuerdo, como una vela, brilla más en Navidad.</p>
             <p>¡Felices fiestas!</p>
         </div>
     </div>
