--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="left-card">
             <div class="card-front">
-                <img src="images/hero.jpg" alt="portada tarjeta navideña">
+                <img src="images/cover.jpg" alt="portada tarjeta navideña">
             </div>
             <div class="card-back">
                 <!-- texto opcional -->
